[tool.poetry]
name = "cybench"
version = "0.0.0"
description = "A dataset and benchmark for subnational crop yield forecasting, with coverage of major crop growing countries of the world for maize and wheat"
authors = ["AgML <agmlcybench@gmail.com>"]
license = "EUPL"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
matplotlib = "^3.9.0"
scikit-learn = "^1.5.0"
statsmodels = "^0.14.2"
flake8 = "^7.0.0"
pytest-cov = "^5.0.0"
tqdm = "^4.66.4"
pandas = "^2.2.2"
numpy = "^1.26.4"
datetime = "^5.5"
pytest = "^8.2.2"
pyyaml = "^6.0.1"
comet-ml = "^3.43.1"
seaborn = "^0.13.2"
tsai = "^0.3.9"
torch = "^2.2.2"
pymannkendall = "^1.4.3"
urllib3 = "^1.26.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
